adiçaõ do componente if-else

--- a/src/app/components/first-component/first-component.component.html
+++ b/src/app/components/first-component/first-component.component.html
@@ -1,5 +1,7 @@
-<p>Nome: {{name}} </p>
-<p>Numero: {{numero}}</p>
-<p>profissão: {{profission}}</p>
-<p>hobbies: {{hobbies[1]}}</p>
-<p>Carro: {{ car.name }} - {{car.year}}</p>
+<div class="class">
+    <p>Nome: {{name}} </p>
+    <p>Numero: {{numero}}</p>
+    <p>profissão: {{profission}}</p>
+    <p>hobbies: {{hobbies[1]}}</p>
+    <p>Carro: {{ car.name }} - {{car.year}}</p>
+</div>
