--- a/src/app/components/directives/directives.component.html
+++ b/src/app/components/directives/directives.component.html
@@ -1,1 +1,3 @@
-<h2 [ngStyle]="{'font-size': '12px'}">Testando diretivas de estilo / estyle</h2>
+<div class="class">
+    <h2 [ngStyle]="{'font-size': '12px'}">Testando diretivas de estilo / estyle</h2>
+</div>
