--- a/src/app/components/parent-data/parent-data.component.html
+++ b/src/app/components/parent-data/parent-data.component.html
@@ -1,4 +1,6 @@
-<h1>descrevendo usuário:</h1>
-<p>nome: {{name}}</p>
-<p>email: {{userData.email}}</p>
-<p>role: {{userData.role}}</p>
+<div class="class">
+    <h1>descrevendo usuário:</h1>
+    <p>nome: {{name}}</p>
+    <p>email: {{userData.email}}</p>
+    <p>role: {{userData.role}}</p>
+</div>
