--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,15 @@
 <h1> hello world Angular!
+
 </h1>
 <app-first-component></app-first-component>
 <app-parent-data [name]="userName" [userData]="userData"></app-parent-data>
 <app-directives></app-directives>
 <app-if-render></app-if-render>
 <app-eventos></app-eventos>
-<app-emitter></app-emitter>
-<app-list-render></app-list-render>
+<nav>
+    <a routerLink="/">Animais</a>
+    <a routerLink="/changeNumber">Número aleatório</a>
+</nav>
+<router-outlet></router-outlet>
 <app-pipes></app-pipes>
 <app-two-way-binding></app-two-way-binding>
